@@ -1,4 +1,4 @@
 #maven.buildNumber.plugin properties file
-#Sat Jan 05 10:50:08 CET 2013
+#Sun Jan 06 18:42:13 CET 2013
 buildNumber=4
-buildNumber0=1410
+buildNumber0=1425
