@@ -14,3 +14,5 @@ InMemoryLinkDatabase now complete and tested
 LinkDatabaseMatchListener bug fixes
 Added PhoneNumberCleaner
 Faster Levenshtein implementation
+Levenshtein weight estimator now knows position in string (issue 81)
+Improvements to DebugCompare tool
